--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,33 @@
 Package: SignalDetectionTool
 Title: PKG_TITLE
 Version: 0.0.0.9000
-Authors@R: person('AUTHOR_FIRST', 'AUTHOR_LAST', email = 'AUTHOR@MAIL.COM', role = c('cre', 'aut'))
+Authors@R: 
+    person("AUTHOR_FIRST", "AUTHOR_LAST", , "AUTHOR@MAIL.COM", role = c("cre", "aut"))
 Description: PKG_DESC.
 License: What license is it under?
 Imports: 
+    checkmate,
     config,
+    dplyr,
+    DT,
+    ggiraph,
+    ggplot2,
     golem,
-    shiny
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.1
+    gt,
+    ISOweek,
+    lubridate,
+    plotly,
+    rlang,
+    scales,
+    shiny,
+    stringr,
+    surveillance,
+    tidyverse
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Encoding: UTF-8
 Language: en-US
+LazyData: true
+RoxygenNote: 7.2.3
