--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,9 @@ po/*~
 rsconnect/
 
 # Data files - to avoid unintended commits, remove these temporarily when needed
-data/
+# data/
 *.csv
+
 
 # Temporary idea files
 .idea/
