adding associated man-files and NAMESPACE-additions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,11 @@ importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(magrittr,`%>%`)
+importFrom(plyr,round_any)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(stringr,str_split_1)
+importFrom(stringr,str_split_fixed)
+importFrom(stringr,str_starts)
