updating age_format_check to include age_group divider and updating namespace and man

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,6 @@ importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(stringr,str_ends)
+importFrom(stringr,str_extract_all)
 importFrom(stringr,str_split_fixed)
 importFrom(stringr,str_starts)
