--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(age_groups)
 export(aggregate_signals)
+export(algo.cusum_with_reset)
 export(conjure_filename)
 export(create_results_table)
+export(cusum_with_reset)
 export(get_float_columns)
 export(get_signals)
 export(plot_agegroup_by)
