ensuring explicit snapshot type to only include packages in DESCRIPTION

--- a/renv/settings.json
+++ b/renv/settings.json
@@ -8,7 +8,7 @@
     "LinkingTo"
   ],
   "r.version": null,
-  "snapshot.type": "implicit",
+  "snapshot.type": "explicit",
   "use.cache": true,
   "vcs.ignore.cellar": true,
   "vcs.ignore.library": true,
