--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(aggregate_signals)
 export(algo.cusum_with_reset)
 export(conjure_filename)
 export(create_results_table)
+export(create_stratified_table)
 export(cusum_with_reset)
 export(get_float_columns)
 export(get_signals)
