--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,33 +8,33 @@ License: MIT + file LICENSE
 Depends: 
     R (>= 2.10)
 Imports: 
-    aeddo,
-    checkmate,
-    config,
-    dplyr,
-    DT,
-    ggplot2,
-    golem,
+    aeddo (>= 0.1.1),
+    checkmate (>= 2.3.1),
+    config (>= 0.3.2),
+    dplyr (>= 1.1.4),
+    DT (>= 0.31),
+    ggplot2 (>= 3.4.4),
+    golem (>= 0.4.1),
     grDevices,
-    gt,
-    ISOweek,
-    lubridate,
-    magrittr,
-    plotly,
-    purrr,
-    readxl,
-    rlang,
-    rmarkdown,
-    markdown,
-    scales,
-    sf,
-    shiny,
-    shinybusy,
-    shinyvalidate,
+    gt (>= 0.10.0),
+    ISOweek (>= 0.6.2),
+    lubridate (>= 1.9.3),
+    magrittr (>= 2.0.3),
+    plotly (>= 4.10.4),
+    purrr (>= 1.0.2),
+    readxl (>= 1.4.2),
+    rlang (>= 1.1.3),
+    rmarkdown (>= 2.26),
+    markdown (>= 1.12),
+    scales (>= 1.3.0),
+    sf (>= 1.0.15),
+    shiny (>= 1.8.0),
+    shinybusy (>= 0.3.2),
+    shinyvalidate (>= 0.1.3),
     stats,
-    stringr,
-    surveillance,
-    tidyr,
+    stringr (>= 1.5.1),
+    surveillance (>= 1.22.1),
+    tidyr (>= 1.3.0),
     tools
 Suggests: 
     knitr,
@@ -46,4 +46,4 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
