--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,12 +22,12 @@ Imports:
     magrittr (>= 2.0.3),
     plotly (>= 4.10.4),
     purrr (>= 1.0.2),
-    readxl (>= 1.4.2),
-    rlang (>= 1.1.3),
-    rmarkdown (>= 2.26),
+    readxl (>= 1.4.1),
+    rlang (>= 1.1.1),
+    rmarkdown (>= 2.20),
     markdown (>= 1.12),
-    scales (>= 1.3.0),
-    sf (>= 1.0.15),
+    scales (>= 1.2.1),
+    sf (>= 1.0.9),
     shiny (>= 1.8.0),
     shinybusy (>= 0.3.1),
     shinyvalidate (>= 0.1.3),
@@ -37,8 +37,8 @@ Imports:
     tidyr (>= 1.2.1),
     tools
 Suggests: 
-    knitr,
-    spelling,
+    knitr (>= 1.42),
+    spelling (>= 2.3.0),
     testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
