Adds a paramater to the config.yaml that indicates whether data should be imported through an internal routine. The actual routine is not implemented here, the user itself has to implement a 'readDB' function in a script called 'internal.R'. Adds a reactive function that uses the readDB function for import if the parameter in the yaml is set to true and uses the previous read_csv rotuine otherwise.

--- a/inst/golem-config.yml
+++ b/inst/golem-config.yml
@@ -2,7 +2,10 @@ default:
   golem_name: SignalDetectionTool
   golem_version: 0.0.0.9000
   app_prod: no
+  readDB: FALSE
 production:
   app_prod: yes
+  readDB: FALSE
 dev:
   golem_wd: !expr golem::pkg_path()
+  readDB: FALSE
