adds a aparmeter in the yaml so that one can specify the default strata variables; adds the functionality of automatically setting the default strata variables

--- a/inst/golem-config.yml
+++ b/inst/golem-config.yml
@@ -3,6 +3,7 @@ default:
   golem_version: 0.0.0.9000
   app_prod: no
   readDB: FALSE
+  strata: ['None']
 production:
   app_prod: yes
   readDB: FALSE
