--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,10 +24,10 @@ Imports:
     config (>= 0.3.2),
     dplyr (>= 1.1.4),
     DT (>= 0.26),
+    flextable (>= 0.9.2),
     ggplot2 (>= 3.4.4),
     golem (>= 0.4.1),
     grDevices,
-    gt (>= 0.9.0),
     htmlwidgets (>= 1.5.3),
     ISOweek (>= 0.6.2),
     lubridate (>= 1.9.0),
