--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,14 @@ export(aggregate_data)
 export(aggregate_signals)
 export(algo.cusum_with_reset)
 export(conjure_filename)
-export(create_results_table)
-export(create_stratified_table)
 export(cusum_with_reset)
 export(get_float_columns)
 export(get_signals)
 export(plot_agegroup_by)
 export(plot_time_series)
 export(preprocess_data)
+export(process_signals_agg_for_table)
+export(process_signals_for_table)
 export(run_app)
 export(run_report)
 export(save_signals)
