--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports:
     golem (>= 0.4.1),
     grDevices,
     gt (>= 0.9.0),
+    htmlwidgets (>= 1.5.3),
     ISOweek (>= 0.6.2),
     lubridate (>= 1.9.0),
     magrittr (>= 2.0.3),
