adding a pad_signals() function instead of doing the computation without function in signals tab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(create_stratified_table)
 export(cusum_with_reset)
 export(get_float_columns)
 export(get_signals)
+export(pad_signals)
 export(plot_agegroup_by)
 export(plot_time_series)
 export(preprocess_data)
