renaming functions in results_table.R for generating the tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(get_float_columns)
 export(get_signals)
 export(plot_agegroup_by)
 export(plot_time_series)
+export(prepare_signals_agg_table)
+export(prepare_signals_table)
 export(preprocess_data)
-export(process_signals_agg_for_table)
-export(process_signals_for_table)
 export(run_app)
 export(run_report)
 export(save_signals)
