--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(aggregate_signals)
 export(algo.cusum_with_reset)
+export(build_signals_agg_table)
+export(build_signals_table)
 export(conjure_filename)
 export(cusum_with_reset)
 export(get_float_columns)
@@ -9,8 +11,6 @@ export(get_signals)
 export(pad_signals)
 export(plot_agegroup_by)
 export(plot_time_series)
-export(prepare_signals_agg_table)
-export(prepare_signals_table)
 export(preprocess_data)
 export(run_app)
 export(run_report)
