--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(lubridate,`%within%`)
 importFrom(magrittr,`%>%`)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
