adding missing docu

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_missing_isoweeks)
 export(aggregate_data)
 export(aggregate_signals)
 export(algo.cusum_with_reset)
+export(build_empty_datatable)
 export(build_signals_agg_table)
 export(build_signals_table)
 export(conjure_filename)
@@ -18,6 +19,7 @@ export(run_app)
 export(run_report)
 export(save_signals)
 import(shiny)
+importFrom(DT,datatable)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
