--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -71,7 +71,7 @@ jobs:
 
           # Detect files that need committing
           if ! git rev-parse HEAD >/dev/null 2>&1; then
-            echo "Warning: No commits found in the repository. Nothing to diff." # in case of empty branches or detached heads, should basically never occur
+            echo "Warning: No commits found in the repository. Nothing to diff."
             FILES_TO_COMMIT=""
           else
             FILES_TO_COMMIT=$(git diff-index --name-only HEAD | egrep --ignore-case '\.(R|[qR]md|Rmarkdown|Rnw|Rprofile)$' || echo "")
@@ -81,19 +81,24 @@ jobs:
             echo "Files to commit: $FILES_TO_COMMIT"
 
             # Set up Git user
+            echo "Setup Git user"
             git config --local user.name "${GITHUB_ACTOR}"
             git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
             # Add and commit changes
+            echo "add changed files"
             for file in $FILES_TO_COMMIT; do
               git add "$file"
             done
+            echo "commit added files"
             git commit -m "Style code (GHA)"
 
             # Ensure the latest changes from source branch are integrated
+            echo "pull source branch"
             git pull --rebase origin "$SOURCE_BRANCH"
 
             # Push changes back to the PR branch
+            echo "push GHA changes"
             git push origin HEAD:"$SOURCE_BRANCH"
           else
             echo "No changes to commit."
