adding missing documentation files and updated NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,15 +9,20 @@ export(build_signals_agg_table)
 export(build_signals_table)
 export(conjure_filename)
 export(cusum_with_reset)
+export(get_data_config_value)
+export(get_database_connection)
 export(get_float_columns)
 export(get_signals)
+export(load_data_db)
 export(pad_signals)
 export(plot_agegroup_by)
 export(plot_time_series)
 export(preprocess_data)
+export(query_database)
 export(run_app)
 export(run_report)
 export(save_signals)
+export(transform_required_format)
 import(shiny)
 importFrom(DT,datatable)
 importFrom(golem,activate_js)
@@ -27,6 +32,7 @@ importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(lubridate,`%within%`)
 importFrom(magrittr,`%>%`)
+importFrom(purrr,pluck)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
