--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,9 @@ Suggests:
     knitr (>= 1.42),
     ggforce (>= 0.4.2), 
     spelling (>= 2.3.0),
-    testthat (>= 3.1.5)
+    testthat (>= 3.1.5),
+    DBI (>= 1.2.3),
+    RSQLite (>= 2.3.9)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
