--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_missing_isoweeks)
 export(aggregate_data)
 export(aggregate_signals)
 export(algo.cusum_with_reset)
+export(available_algorithms)
 export(build_empty_datatable)
 export(build_signals_agg_table)
 export(build_signals_table)
