all files which are initialised by usethis::use_pkgdown_github_pages() and needed for the gh page

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,3 +67,4 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 RoxygenNote: 7.3.2
+URL: https://united4surveillance.github.io/signal-detection-tool/
