-add missing docu for new functions - rename tool_functions.R to age_group.R and move save signals functions to a seperate R file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_missing_isoweeks)
 export(aggregate_data)
+export(aggregate_pad_signals)
 export(aggregate_signals)
 export(algo.cusum_with_reset)
 export(available_algorithms)
@@ -14,6 +15,7 @@ export(get_data_config_value)
 export(get_database_connection)
 export(get_float_columns)
 export(get_signals)
+export(get_signals_all)
 export(load_data_db)
 export(pad_signals)
 export(plot_agegroup_by)
