adding package base64enc to DESCRIPTION Imports as this is used in the run_report() function for the logo

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,8 @@ Imports:
     surveillance (>= 1.21.0),
     tidyr (>= 1.2.1),
     forcats (>= 1.0.0),
-    plyr (>= 1.8.8)
+    plyr (>= 1.8.8),
+    base64enc
 Suggests: 
     knitr (>= 1.42),
     ggforce (>= 0.4.2),
