--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_signals_all)
 export(load_data_db)
 export(pad_signals)
 export(plot_agegroup_by)
+export(plot_signals_per_week)
 export(plot_time_series)
 export(preprocess_data)
 export(query_database)
