--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ License: MIT + file LICENSE
 Depends: 
     R (>= 4.0.2)
 Imports: 
+    aeddo (>= 0.1.1),
     bslib (>= 0.7.0),
     checkmate (>= 2.1.0),
     config (>= 0.3.2),
