--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,8 +52,8 @@ Imports:
     tidyr (>= 1.2.1),
     forcats (>= 1.0.0),
     plyr (>= 1.8.8),
-    base64enc,
-    jsonlite
+    base64enc (>= 0.1-3),
+    jsonlite (>= 1.8.8)
 Suggests: 
     knitr (>= 1.42),
     ggforce (>= 0.4.2),
@@ -61,7 +61,7 @@ Suggests:
     testthat (>= 3.1.5),
     DBI (>= 1.2.3),
     RSQLite (>= 2.3.9),
-    flexdashboard
+    flexdashboard (>= 0.6.2)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
