removed jsonlite from DESCRIPTION, signals_week plot is internal function, reintroduced automatic yaxis zooming

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,8 +51,7 @@ Imports:
     tidyr (>= 1.2.1),
     forcats (>= 1.0.0),
     plyr (>= 1.8.8),
-    base64enc (>= 0.1-3),
-    jsonlite (>= 1.8.8)
+    base64enc (>= 0.1-3)
 Suggests: 
     aeddo (>= 0.1.1),
     knitr (>= 1.42),
