--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
     config (>= 0.3.2),
     dplyr (>= 1.1.4),
     DT (>= 0.26),
+    flexdashboard (>= 0.6.2),
     flextable (>= 0.9.2),
+    ggforce (>= 0.4.2),
     ggplot2 (>= 3.4.4),
     golem (>= 0.4.1),
     htmlwidgets (>= 1.5.3),
@@ -55,12 +57,10 @@ Imports:
 Suggests: 
     aeddo (>= 0.1.1),
     knitr (>= 1.42),
-    ggforce (>= 0.4.2),
     spelling (>= 2.3.0),
     testthat (>= 3.1.5),
     DBI (>= 1.2.3),
-    RSQLite (>= 2.3.9),
-    flexdashboard (>= 0.6.2)
+    RSQLite (>= 2.3.9)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
