--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,8 @@ Imports:
     tidyr (>= 1.2.1),
     forcats (>= 1.0.0),
     plyr (>= 1.8.8),
-    base64enc (>= 0.1-3)
+    base64enc (>= 0.1-3),
+    zip (>= 2.3.1)
 Suggests: 
     aeddo (>= 0.1.1),
     knitr (>= 1.42),
