--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ Imports:
     magrittr (>= 2.0.3),
     plotly (>= 4.10.4),
     purrr (>= 1.0.2),
+    readr (>= 2.0.0),
     readxl (>= 1.4.1),
     rlang (>= 1.1.1),
     rmarkdown (>= 2.20),
