make get_possible_methods exportable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(cusum_with_reset)
 export(get_data_config_value)
 export(get_database_connection)
 export(get_float_columns)
+export(get_possible_methods)
 export(get_signals)
 export(get_signals_all)
 export(load_data_db)
