--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SignalDetectionTool
 Title: Automated Signal Detection for Infectious Disease Surveillance
-Version: 0.8.0
+Version: 0.9.0
 Authors@R: 
     c(
     person("Ann Christin", "Vietor", email = "VietorA@rki.de" ,role = c("aut","cre")),
@@ -14,7 +14,8 @@ Authors@R:
     person("Oskari", "Luomala", role = c("aut")),
     person("Tomas", "Martin-Bertelsen", role = c("aut")),
     person("Andreas", "Hicketier", role = c("ctb")),
-    person("Juan", "Estupinan Mendez", role = c("ctb"))
+    person("Juan", "Estupinan Mendez", role = c("ctb")),
+    person("Jana","Herret, role = c("ctb"))
     )
 Description: An interactive shiny app for signal detection of infectious disease surveillance data. This app allows the user to investigate generated signals and corresponding surveillance time series. It includes upload of csv or Excel files, data checks, possibility to set parameters for signal detection, visualisation of results and generation of reports.
 License: MIT + file LICENSE
